--- a/index.html
+++ b/index.html
@@ -1,66 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Campus Flood Simulation - MVP</title>
-  <!-- Bootstrap (optional for quick responsive layout) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Leaflet -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <!-- Local stylesheet -->
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Campus Flood Simulation — Prototype</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <div class="container py-3">
-    <h1 class="mb-3">Campus Flood Simulation — MVP</h1>
+  <div class="container">
+    <!-- LEFT: Controls -->
+    <aside class="controls card">
+      <h2>Simulation Controls</h2>
 
-    <div class="row">
-      <div class="col-lg-7 mb-3">
-        <div id="map" class="map-card"></div>
+      <label for="campusSelect">Select Campus</label>
+      <select id="campusSelect"></select>
+
+      <label for="intensity">Rainfall intensity (mm/hr)</label>
+      <input id="intensity" type="number" value="30" min="0" max="200" />
+
+      <label for="duration">Duration (minutes)</label>
+      <input id="duration" type="number" value="60" min="0" max="1440" />
+
+      <div class="scenario-row">
+        <button class="scenario-btn" data-i="10" data-d="30">Light</button>
+        <button class="scenario-btn" data-i="30" data-d="60">Moderate</button>
+        <button class="scenario-btn" data-i="60" data-d="120">Heavy</button>
       </div>
 
-      <div class="col-lg-5">
-        <div class="card mb-3 p-3">
-          <label for="campusSelect" class="form-label">Campus</label>
-          <select id="campusSelect" class="form-select mb-2"></select>
+      <button id="runSim" class="run-btn">Run Simulation</button>
 
-          <label for="rainfallRange" class="form-label">
-            Rainfall (mm/hr): <span id="rainValue">10</span>
-          </label>
-          <input id="rainfallRange" type="range" min="0" max="50" step="1" value="10" class="form-range mb-3">
-
-          <canvas id="riskChart" height="140"></canvas>
-
-          <div id="recommendation" class="mt-3 p-2 border rounded">
-            <strong>Recommendation:</strong>
-            <div id="recText">Select a campus and adjust rainfall to see recommendation.</div>
-          </div>
-        </div>
-
-        <div class="card p-3">
-          <h6>Legend</h6>
-          <ul class="list-unstyled mb-0">
-            <li><span class="legend swatch low"></span> Low</li>
-            <li><span class="legend swatch medium"></span> Medium</li>
-            <li><span class="legend swatch high"></span> High</li>
-            <li><span class="legend swatch critical"></span> Critical</li>
-          </ul>
-        </div>
+      <div class="notes small">
+        <p><strong>Note:</strong> Sensitivities are prototype estimates based on historical reporting — tune them with real sensor or gauge data for production.</p>
       </div>
-    </div>
+    </aside>
 
-    <footer class="mt-4 text-muted small">Prototype · No realtime weather API · For demo only</footer>
+    <!-- CENTER: Map (bounded frame) -->
+    <main class="map-panel card">
+      <div id="map" aria-label="Campus map"></div>
+    </main>
+
+    <!-- RIGHT: Results -->
+    <aside class="results card">
+      <h3>Flood Risk by Street</h3>
+      <table id="floodTable" class="flood-table">
+        <thead>
+          <tr><th>Street</th><th>Risk</th><th>Expected height (cm)</th></tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+
+      <h3>Rainfall profile</h3>
+      <canvas id="rainfallChart"></canvas>
+
+      <h3>Street hazard breakdown</h3>
+      <canvas id="hazardChart"></canvas>
+
+      <div class="kpis">
+        <div><strong>Flood onset</strong>: <span id="kpiOnset">--</span> min</div>
+        <div><strong>Passable routes</strong>: <span id="kpiRoutes">--</span></div>
+        <div><strong>Model accuracy (placeholder)</strong>: <span id="kpiAccuracy">85%</span></div>
+      </div>
+    </aside>
   </div>
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <!-- Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-
-  <!-- Preprocessed data file -->
   <script src="data.js"></script>
-  <!-- App logic -->
   <script src="script.js"></script>
 </body>
 </html>
